<resources>
    <string name="app_name" translatable="false">SandboxGame</string>
    <string name="message_start_game">START</string>
    <string name="message_continue_game">CONTINUE</string>
    <string name="message_name_of_the_game" translatable="false">Sandbox Game</string>
    <string name="message_of_amount_cell">Planets</string>
    <string name="message_amount_of_clans">Types</string>
    <string name="message_amount_of_infected">Infected</string>
    <string name="message_amount_of_died">Total died</string>
    <string name="title_game_setup" translatable="false">Game Setup</string>
    <string name="message_add_cell">Add a planet</string>
    <string name="message_delete_cell">Delete a planet</string>
    <string name="message_infect_cell">Infect a planet</string>
    <string name="title_exit">EXIT</string>
    <string name="message_select_field" translatable="false">Select field, please</string>
    <string name="message_settings_game">SETTINGS</string>
    <string name="message_speed_cell">SPEED</string>
    <string name="message_treat_cell">TREAT A CELL</string>
    <string name="message_sound_of_game">SOUND</string>
    <string name="message_add_food">ADD FOOD</string>
    <string name="title_continue" translatable="false">CONTINUE</string>
    <string name="message_time_save" translatable="false">00:00</string>
    <string name="message_date_save">00/00/0000</string>
    <string name="message_world_name">Name of theWorld number __</string>
    <string name="back" translatable="false">back</string>
    <string name="message_save_game">Would you like to save the game \n before exiting?</string>
    <string name="message_yes">YES</string>
    <string name="message_no">NO</string>
    <string name="button_save">SAVE</string>
    <string name="title_save_game" translatable="false">SAVE THE GAME</string>
    <string name="button_continue">CONTINUE</string>
    <string name="message_warning_text" translatable="false">Oops! \nIt seems you have exceeded \nthe limit of your worlds. \nContinue an existing
        one \nor delete an old one \nto start over</string>
    <string name="button_cancel" translatable="false">cancel</string>
    <string name="warning" translatable="false">warning</string>
    <string name="message_delete">DELETE</string>


</resources>