<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/background_sandbox"
    tools:ignore="MissingConstraints,MissingDefaultResource">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_start"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/message_start_game"
            android:background="@drawable/focus_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_continue"/>

        <Button
            android:id="@+id/button_continue"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/message_continue_game"
            android:background="@drawable/focus_state"
            app:layout_constraintStart_toStartOf="@id/button_start"
            app:layout_constraintEnd_toEndOf="@id/button_start"
            app:layout_constraintTop_toBottomOf="@id/button_start"
            app:layout_constraintBottom_toTopOf="@id/button_settings"/>

        <Button
            android:id="@+id/button_settings"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/message_settings_game"
            android:background="@drawable/focus_state"
            app:layout_constraintStart_toStartOf="@id/button_start"
            app:layout_constraintEnd_toEndOf="@id/button_start"
            app:layout_constraintTop_toBottomOf="@id/button_continue"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/warning_window"
        android:layout_width="200dp"
        android:layout_height="182dp"
        android:background="@drawable/background_dark"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="@id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
        app:layout_constraintStart_toEndOf="@id/constraintLayout"
        android:contentDescription="@string/warning" />

    <TextView
        style="@style/Text.Medium.Roboto"
        android:id="@+id/warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_warning_text"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/warning_window"
        app:layout_constraintEnd_toEndOf="@id/warning_window"
        app:layout_constraintTop_toTopOf="@id/warning_window"
        app:layout_constraintBottom_toBottomOf="@id/warning_window"/>

    <ImageView
        android:id="@+id/button_cancel"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_cancel"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@id/warning_window"
        app:layout_constraintEnd_toEndOf="@id/warning_window"
        android:contentDescription="@string/button_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>